# mkd-tools

./: .gitignore  CMakeLists.txt  Info.plist.in  README.md
.github/workflows/: ci.yml  test-windows.yml
apps/monokakido-receipt-ui/: AppDelegate.swift  MKDReceiptBridge.mm
cli/: CMakeLists.txt
cli/include/MKDCLI/: cli.hpp  commands.hpp  format.hpp  progress.hpp
cli/src/: cli.cpp  commands.cpp  format.cpp  main.cpp  progress.cpp
include/MKD/: mkd.hpp  result.hpp
include/MKD/dictionary/: dictionary.hpp  dictionary_info.hpp  dictionary_product.hpp  dictionary_search.hpp  metadata.hpp  paths.hpp
include/MKD/output/: appendix_entry_exporter.hpp  base_exporter.hpp  common.hpp  event.hpp  export_options.hpp  export_result.hpp  headline_exporter.hpp  keystore_exporter.hpp  resource_exporter.hpp
include/MKD/platform/: dictionary_source.hpp  directory_dictionary_source.hpp  fs.hpp  read_sequence.hpp
include/MKD/platform/macos/: folder_prompt.hpp  fs.hpp  macos_dictionary_source.hpp  (+1 more)
include/MKD/resource/: appendix_entry_list.hpp  common.hpp  entry_id.hpp  font.hpp  headline_store.hpp  keystore.hpp  keystore_lookup_result.hpp  keystore_scope.hpp  keystore_search.hpp  named_resource_store.hpp  nrsc.hpp  resource_loader.hpp  resource_store.hpp  resource_type.hpp  retained_span.hpp  rsc.hpp  search_mode.hpp  stylesheet.hpp  xml_view.hpp  zlib_decompressor.hpp
include/monokakido/dictionary/: catalog.hpp  dictionary.hpp  metadata.hpp  paths.hpp
include/monokakido/output/: base_exporter.hpp  common.hpp  export_options.hpp  exporter.hpp  font_exporter.hpp  headline_exporter.hpp  keystore_exporter.hpp  nrsc_exporter.hpp  rsc_exporter.hpp
include/monokakido/resource/: common.hpp  font.hpp  nrsc.hpp  nrsc_data.hpp  nrsc_index.hpp  nrsc_index_record.hpp  resource_loader.hpp  xml_view.hpp  zlib_decompressor.hpp
src/: CMakeLists.txt  main.cpp
src/core/platform/: fs.mm  scoped_security_access.mm
src/dictionary/: CMakeLists.txt  catalog.cpp  dictionary.cpp  dictionary_product.cpp  dictionary_search.cpp  dictionary_search.hpp  metadata.cpp  paths.cpp  text_normalize.cpp  text_normalize.hpp
src/dictionary/search/: CMakeLists.txt  dic_complex_search_logic.cpp  dic_complex_search_logic.hpp  dic_search_logic.cpp  dic_search_logic.hpp  kanwa_dic_search_logic.cpp  kanwa_dic_search_logic.hpp  kldic_complex_search_logic.cpp  kldic_complex_search_logic.hpp  klkanwa_dic_search_logic.cpp  klkanwa_dic_search_logic.hpp  kogo_dic_search_logic.cpp  kogo_dic_search_logic.hpp  search_common.cpp  search_common.hpp  search_logic.hpp  search_logic_factory.cpp  search_logic_factory.hpp
src/output/: CMakeLists.txt  appendix_entry_exporter.cpp  base_exporter.cpp  export_accumulator.cpp  font_exporter.cpp  headline_exporter.cpp  keystore_exporter.cpp  nrsc_exporter.cpp  resource_exporter.cpp  rsc_exporter.cpp
src/platform/: CMakeLists.txt  binary_file_reader.cpp  binary_file_reader.hpp  directory_dictionary_source.cpp  fs.cpp  mmap_file.cpp  mmap_file.hpp  parallel.cpp  read_sequence.cpp  read_sequence.hpp
src/platform/macos/: CMakeLists.txt  bookmark_store.cpp  bookmark_store.mm  folder_prompt.mm  fs.cpp  fs.mm  macos_dictionary_source.cpp  monokakido_receipt.cpp  parallel.cpp  parallel.mm  scoped_security_access.cpp  scoped_security_access.mm
src/resource/: CMakeLists.txt  appendix_entry_list.cpp  common.cpp  font.cpp  nrsc.cpp  nrsc_data.cpp  nrsc_index.cpp  nrsc_index_record.cpp  resource_loader.cpp  stylesheet.cpp  xml_view.cpp  zlib_decompressor.cpp  zlib_decompressor.hpp
src/resource/detail/: CMakeLists.txt  binary_buffer.cpp  binary_buffer.hpp  sequential_blob_writer.cpp  sequential_blob_writer.hpp  zlib_stream.cpp  zlib_stream.hpp
src/resource/headlines/: CMakeLists.txt  headline_store.cpp
src/resource/keystore/: CMakeLists.txt  entry_id.cpp  keystore.cpp  keystore_compare.cpp  keystore_compare.hpp  keystore_scope.hpp  keystore_search.cpp  keystore_search.hpp  keystore_writer.cpp  page_reference.cpp
src/resource/nrsc/: CMakeLists.txt  named_resource_store.cpp  named_resource_store_contents.hpp  named_resource_store_contents_fileio.cpp  named_resource_store_contents_mmap.cpp  named_resource_store_index.cpp  named_resource_store_index.hpp  named_resource_store_index_record.cpp  named_resource_store_index_record.hpp  named_resource_store_writer.cpp  named_resource_store_writer.hpp  nrsc.cpp  nrsc_data.cpp  nrsc_data.hpp  nrsc_data_fileio.cpp  nrsc_data_mmap.cpp  nrsc_index.cpp  nrsc_index.hpp  nrsc_index_record.cpp  nrsc_index_record.hpp  nrsc_writer.cpp  nrsc_writer.hpp
src/resource/rsc/: CMakeLists.txt  resource_store.cpp  resource_store_contents.hpp  resource_store_contents_fileio.cpp  resource_store_contents_mmap.cpp  resource_store_crypto.cpp  resource_store_crypto.hpp  resource_store_index.cpp  resource_store_index.hpp  resource_store_index_record.cpp  resource_store_index_record.hpp  resource_store_map.cpp  resource_store_map.hpp  resource_store_writer.cpp  resource_store_writer.hpp  rsc.cpp  rsc_crypto.cpp  rsc_data.cpp  rsc_data.hpp  rsc_data_fileio.cpp  rsc_data_mmap.cpp  rsc_decryptor.cpp  rsc_index.cpp  rsc_index.hpp  rsc_index_record.cpp  rsc_index_record.hpp  rsc_keystore.cpp  rsc_map.cpp  rsc_writer.cpp  rsc_writer.hpp
src/unicode/: CMakeLists.txt  case.hpp  constants.hpp  normalization.cpp  normalization.hpp  search_folding.cpp  search_folding.hpp  unicode.cpp  unicode.hpp  unicode_data.hpp  utf8.cpp  utf8.hpp
test/: CMakeLists.txt  main.cpp  test_listener.hpp
test/ci/: verify_fixture_export.py
test/crypto/: test_chacha_poly.cpp  test_encrypt.cpp
test/headline/: headline_test.cpp
test/keystore/: test_keystore.cpp  test_keystore_compare.cpp  test_keystore_search.cpp
test/nrsc/: test_nrsc_index.cpp
test/rsc/: test_rsc_data.cpp  test_rsc_index.cpp
test/search/: test_dictionary_search.cpp
test/test-data/TESTDICT/Contents/TESTDICT/graphics/: 00000.nrsc  index.nidx
test/test-data/TESTDICT/Contents/TESTDICT/headline/: headline.headlinestore
test/test-data/TESTDICT/Contents/TESTDICT/key/: headword.keystore
test/zlib/: zlib_stream_test.cpp
(+37 files in other folders)
